# hashi

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: epic.md  feature.md  teste.md  user-story.md
db/: compras.csv
exe/: cli.cpp  log.cpp  main.cpp  setup.cpp
lib/hashi/include/: avail.hpp  bucket.hpp  db.hpp  dir.hpp  reg.hpp  stream.hpp
lib/hashi/src/: avail.cpp  bucket.cpp  db.cpp  dir.cpp  reg.cpp  stream.cpp
lib/hashi/test/: dummy_test.cpp  hashi_test.cpp
lib/ui/include/: cli.hpp  log.hpp
lib/ui/src/: cli.cpp
